--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/base.scss
@@ -25,6 +25,11 @@ main.content-main {
   margin-left: 0;
 }
 
+.col-1, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-10, .col-11, .col-12, .col, .is-act-confirmpage .checkout .checkout-aside, .is-ctl-accountorder .checkout .checkout-aside, .is-act-finishpage .checkout .checkout-aside, .col-auto, .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .is-act-confirmpage .checkout .checkout-additional, .is-ctl-accountorder .checkout .checkout-additional, .col-sm-7, .is-act-finishpage .checkout .checkout-additional, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm, .col-sm-auto, .col-md-1, .col-md-2, .col-md-3, .col-md-4, .is-act-checkoutregisterpage .checkout .checkout-aside, .col-md-5, .is-act-cartpage .checkout .checkout-aside, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12, .col-md, .col-md-auto, .col-lg-1, .col-lg-2, .col-lg-3, .account-content .account-content-aside, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .is-act-cartpage .checkout .checkout-main, .is-act-checkoutregisterpage .checkout .checkout-main, .is-act-confirmpage .checkout .checkout-main, .is-ctl-accountorder .checkout .checkout-main, .is-act-finishpage .checkout .checkout-main, .col-lg-9, .account-content .account-content-main, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg, .col-lg-auto, .col-xl-1, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl, .col-xl-auto {
+  padding-right: 0;
+  padding-left: 0;
+}
+
 .cms-block-container {
   padding: 0;
 }
