changed font and .card-body padding

--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/block-product-three-collumn.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/block-product-three-collumn.scss
@@ -24,6 +24,7 @@
 }
 
 .product-name {
+  font-family: 'SuisseIntl-SemiBold';
   color: #000000;
   display: block;
   font-weight: 600;
@@ -45,6 +46,7 @@
 }
 
 .product-price {
+  font-family: 'SuisseIntl-SemiBold';
   color: #000000;
   margin-top: 0;
   margin-bottom: 0;
