--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/base.scss
@@ -38,6 +38,11 @@ main.content-main {
   padding: 0;
 }
 
+.cms-section-default.boxed {
+  padding-top: 73px;
+  padding-bottom: 73px;
+}
+
 .card-body {
   padding: 0;
 }
