chenged text-block and product image cover

--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/block-product-three-collumn.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/block-product-three-collumn.scss
@@ -29,6 +29,15 @@
 
 .product-image-wrapper {
   margin-bottom: 13px;
+  height: auto;
+}
+
+.product-image.is-standard {
+  object-fit: none; 
+}
+
+.product-image {
+  max-height: none;
 }
 
 .product-name {
