--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-element-text.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-element-text.scss
@@ -1,3 +1,8 @@
 .cms-element-text .btn.btn-primary {
     margin-top: 10px;
-  }
+}
+
+.cms-block-center-text,
+.cms-element-text {
+    padding: 36px 0;
+}
