--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/block-product-three-collumn.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/block-product-three-collumn.scss
@@ -59,7 +59,17 @@
   line-height: 22px;
 }
 
+@media (min-width: 768px) { 
+  
+  .cms-element-product-box {
+    padding-top: 0;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 
+
+
+}
 
 @media (min-width: 992px) {
 
@@ -70,10 +80,6 @@
 
   .product-action {
     margin-top: 14px;
-  }
-
-  .cms-element-product-box {
-    padding-top: 0;
   }
 
 }
