--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-block-center-text.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-block-center-text.scss
@@ -1,3 +1,30 @@
-.cms-block-center-text {
+.cms-block-center-text .cms-element-text {
+    padding: 0 0 40px 0;
+}
+
+.cms-block-center-text .cms-element-image {
+    padding: 0 0 20px 0;
 
 }
+
+@media (min-width: 768px) { 
+  
+    .col-md-7 .cms-element-image {
+        padding: 0 0 0 20px;
+    }
+
+    .cms-block-center-text .cms-element-text {
+        padding: 40px 10px 80px 0;
+        max-width: 420px;
+    }
+  
+  }
+  
+  @media (min-width: 992px) {
+    
+    .cms-block-center-text .cms-element-text {
+        padding: 40px 10px 120px 0;
+    }
+  
+  }
+  
