remove col none on logo, add style section for desktop

--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
@@ -1,3 +1,4 @@
+//mobile
 .offcanvas {
   background: none;
   backdrop-filter: blur(15px);
@@ -51,3 +52,6 @@ div.navigation-offcanvas-headline {
     font-weight: 700;
   }
 }
+//end mobile
+
+
