--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/header/header.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/header/header.html.twig
@@ -24,7 +24,7 @@
                         {% endblock %}
 
                         {% block layout_header_logo %}
-                            <div class="col-auto d-sm-none align-self-center">
+                            <div class="col-auto align-self-center">
                                     {% sw_include '@Storefront/storefront/layout/header/logo.html.twig' %}
                             </div>
                         {% endblock %}
