--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/header.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/header.scss
@@ -5,3 +5,24 @@
   width: 100%;
   z-index: 1040;
 }
+
+
+
+@media (min-width: 768px) { 
+  
+  .header-main {
+    position: fixed;
+    top: 49px;
+    right: 60px;
+    width: auto;
+    left: auto;
+  }
+
+  .header-main .container,
+  .header-main .row,
+  .header-main .header-actions-col {
+    padding: 0;
+  }
+}
+
+
