add logo inside of navigation, and hide it in the header

--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/base.scss
@@ -52,6 +52,10 @@ main.content-main {
     font-size: 48px;
     line-height: 62px;
   }
+
+  header.header-main {
+    display: none;
+  }
   
 }
 
