--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/base.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/base.scss
@@ -48,7 +48,7 @@ main.content-main {
 
 @media (min-width: 768px) { 
   
-  body .header-main .kiyo-logo {
+  body .header-logo-main .kiyo-logo {
     font-size: 48px;
     line-height: 62px;
   }
