--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-block-center-text.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-block-center-text.scss
@@ -17,6 +17,10 @@
         padding: 40px 10px 80px 0;
         max-width: 420px;
     }
+
+    .cms-block-container .cms-element-text {
+        max-width: 420px;
+    }
   
   }
   
