changed desktop nav position

--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
@@ -64,6 +64,8 @@ div.navigation-offcanvas-headline {
 
 .main-navigation .container {
   padding: 0;
+  margin-top: 32px;
+  padding-left: 2px;
 }
 
 .nav-main {
