changed destope font weight for h2

--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/text-formats.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/text-formats.scss
@@ -53,8 +53,9 @@ p:last-child {
     font-size: 32px;
     line-height: 36px;
   }
-  
+
   h2 {
+    font-family: 'SuisseIntl-Medium';
     font-size: 32px;
     line-height: 48px;
     margin-bottom: 48px;
