Add suisseINt medium fontface

--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/fonts.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/fonts.scss
@@ -17,6 +17,12 @@
 }
 
 @font-face {
+  font-family: SuisseIntl-Medium;
+  src: url("/bundles/kiyotheme/assets/fonts/SuisseIntl-Medium.otf") format("opentype");
+  font-weight: 500;
+}
+
+@font-face {
   font-family: SuisseIntlMono-Bold;
   src: url("/bundles/kiyotheme/assets/fonts/SuisseIntlMono-Bold.otf") format("opentype");
   font-weight: bold;
