--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
@@ -53,7 +53,7 @@ div.navigation-offcanvas-headline {
   }
 }
 
-
+//TODO need a breakpoint here?
 /* ---------- DESKTOP NAV STYLES ---------- */
 
 .main-navigation {
