--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-block-text-on-image.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-block-text-on-image.scss
@@ -16,6 +16,8 @@
 @media (min-width: 992px) {
   .cms-block-text-on-image {
     .cms-element-text {
+      padding-left: 50px;
+      padding-right: 50px;
       .cms-element-alignment {
         align-self: center !important;
       }
