--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/buttons.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/buttons.scss
@@ -63,3 +63,17 @@
 .btn.focus {
   box-shadow: none;
 }
+@media (min-width: 768px) {
+  .btn {
+    &.nav-main-toggle-btn {
+      font-family: 'SuisseIntlMono-Bold';
+      font-weight: bold;
+      font-size: 12px;
+      line-height: 15px;
+      color: black;
+      backdrop-filter: blur(40px) brightness(90%);
+      padding: 10px 0;
+      width: 205px;
+    }
+  }
+}
