--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/navigation/offcanvas/categories.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/navigation/offcanvas/categories.html.twig
@@ -9,26 +9,54 @@
 {% block layout_navigation_offcanvas_navigation_categories %}
     <div class="navigation-offcanvas-container js-navigation-offcanvas">
         <div class="navigation-offcanvas-overlay-content js-navigation-offcanvas-overlay-content">
-            {% if not isRoot %}
-                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-all-link.html.twig' %}
+            <div class="row">
+{#            {% if not isRoot %}#}
+{#                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-all-link.html.twig' %}#}
 
-                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/active-item-link.html.twig' with { item: active } %}
+{#                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/active-item-link.html.twig' with { item: active } %}#}
 
-                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/back-link.html.twig' with { item: active } %}
-            {% else %}
-                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/general-headline.html.twig' %}
-            {% endif %}
+{#                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/back-link.html.twig' with { item: active } %}#}
+{#            {% else %}#}
+{#                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/general-headline.html.twig' %}#}
+{#            {% endif %}#}
 
-            <ul class="list-unstyled navigation-offcanvas-list">
-                {% if not isRoot and page.navigation.active.type != "folder" %}
-                    {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-active-link.html.twig' with { item: active } %}
-                {% endif %}
 
-                {# @var item \Shopware\Core\Content\Category\Tree\TreeItem #}
+{#            <ul class="list-unstyled navigation-offcanvas-list">#}
+{#                {% if not isRoot and page.navigation.active.type != "folder" %}#}
+{#                    {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-active-link.html.twig' with { item: active } %}#}
+{#                {% endif %}#}
+{#                #}{# @var item \Shopware\Core\Content\Category\Tree\TreeItem #}
+{#                {% for item in children.tree %}#}
+{#                    {% if item.children|length > 0 %}#}
+{#                        <br>#}
+{#                        {% for subItem in item.children %}#}
+{#                            {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/item-link.html.twig' with { item: subItem, activeId: activeId } %}#}
+{#                        {% endfor %}#}
+{#                    {% else %}#}
+{#                        {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/item-link.html.twig' with { item: item, activeId: activeId } %}#}
+{#                    {% endif %}#}
+{#                {% endfor %}#}
+{#            </ul>#}
                 {% for item in children.tree %}
-                    {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/item-link.html.twig' with { item: item, activeId: activeId } %}
+                    <div class="col-sm-2">
+                        <ul class="list-unstyled navigation-offcanvas-list">
+                            {#                {% if not isRoot and page.navigation.active.type != "folder" %}#}
+                            {#                    {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-active-link.html.twig' with { item: active } %}#}
+                            {#                {% endif %}#}
+                            {# @var item \Shopware\Core\Content\Category\Tree\TreeItem #}
+
+                            {% if item.children|length > 0 %}
+                                {% for subItem in item.children %}
+                                    {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/item-link.html.twig' with { item: subItem, activeId: activeId } %}
+                                {% endfor %}
+                            {% else %}
+                                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/item-link.html.twig' with { item: item, activeId: activeId } %}
+                            {% endif %}
+
+                        </ul>
+                    </div>
                 {% endfor %}
-            </ul>
+            </div>
         </div>
     </div>
 {% endblock %}
