Product detail page. changed spacing. Removed footer images

--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/footer/footer.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/footer/footer.html.twig
@@ -237,15 +237,15 @@
             {% block layout_footer_bottom_partner_logos %}
                 <div class="logos">
                     <div class="row align-items-center">
-                        <div class="col-4 col-md-2 logo">
-                            <img src="{{ asset('bundles/kiyotheme/assets/images/Bundesamt.png', 'asset') }}">
-                        </div>
-                        <div class="col-4 col-md-2 logo">
-                            <img src="{{ asset('bundles/kiyotheme/assets/images/Klimapakt.png', 'asset') }}">
-                        </div>
-                        <div class="col-4 col-md-2 logo">
-                            <img src="{{ asset('bundles/kiyotheme/assets/images/Trusted.png', 'asset') }}">
-                        </div>
+{#                        <div class="col-4 col-md-2 logo">#}
+{#                            <img src="{{ asset('bundles/kiyotheme/assets/images/Bundesamt.png', 'asset') }}">#}
+{#                        </div>#}
+{#                        <div class="col-4 col-md-2 logo">#}
+{#                            <img src="{{ asset('bundles/kiyotheme/assets/images/Klimapakt.png', 'asset') }}">#}
+{#                        </div>#}
+{#                        <div class="col-4 col-md-2 logo">#}
+{#                            <img src="{{ asset('bundles/kiyotheme/assets/images/Trusted.png', 'asset') }}">#}
+{#                        </div>#}
                     </div>
                 </div>
             {% endblock %}
