--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/block/cms-block-gallery-buybox.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/block/cms-block-gallery-buybox.html.twig
@@ -1,10 +1,11 @@
 {% sw_extends '@Storefront/storefront/block/cms-block-gallery-buybox.html.twig' %}
 
 {% block block_gallery_buybox %}
+
     {% block block_gallery_buybox_column_left %}
         {% set element = block.slots.getSlot('left') %}
         {% set config = element.fieldConfig.elements %}
-        <div class="cms-block bg-image" data-cms-element-id="{{ element.id }}">
+
             {% block block_gallery_buybox_column_left_inner %}
                 {% sw_include "@Storefront/storefront/element/cms-element-" ~ element.type ~ ".html.twig" ignore missing
                     with {
@@ -13,20 +14,17 @@
                     'startIndexSlider': 1
                 } %}
             {% endblock %}
-        </div>
     {% endblock %}
-    <div class="col-12">
-
-    </div>
 
 
     {% block block_gallery_buybox_column_right %}
         {% set element = block.slots.getSlot('right') %}
 
-        <div class="col-lg-5 product-detail-buy" data-cms-element-id="{{ element.id }}">
+        <div class="product-detail-buy" data-cms-element-id="{{ element.id }}">
             {% block block_gallery_buybox_column_right_inner %}
                 {% sw_include "@Storefront/storefront/element/cms-element-" ~ element.type ~ ".html.twig" ignore missing %}
             {% endblock %}
         </div>
     {% endblock %}
+{#    {{ dump() }}#}
 {% endblock %}
