--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/element/cms-element-image-gallery.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/element/cms-element-image-gallery.html.twig
@@ -137,7 +137,7 @@
 {#                        <div class="gallery-slider-col{% if galleryPosition == "left" %} col order-1 order-md-2{% elseif galleryPosition == "underneath" %} col-12 order-1{% endif %}"#}
 {#                             {% if zoomModal %}data-zoom-modal="true"{% endif %}>#}
                             {# option "magnifierOverGallery" shows zoom container over gallery #}
-                            <div class="base-slider gallery-slider{% if navigationArrows == "outside" %} has-nav-outside{% endif %}{% if navigationDots == "outside" %} has-dots-outside{% endif %}{% if magnifierOverGallery %} js-magnifier-zoom-image-container{% endif %}">
+                            <div class="base-slider gallery-slider{% if navigationArrows == "outside" %} has-nav-outside{% endif %}{% if navigationDots == "outside" %} has-dots-outside{% endif %} cms-block-background media-mode--cover">
                                 {% block element_image_gallery_inner_wrapper %}
                                     {% if imageCount > 1 %}
                                         {% block element_image_gallery_inner_multiple_slides %}
@@ -148,9 +148,9 @@
                                                         {% for image in mediaItems %}
                                                             {% block element_image_gallery_inner_item %}
                                                                 <div class="gallery-slider-item-container">
-                                                                    <div class="gallery-slider-item is-{{ displayMode }} js-magnifier-container"{% if minHeight and  (displayMode == "cover" or displayMode == "contain" ) %} style="min-height: {{ minHeight }}"{% endif %}>
+                                                                    <div class="gallery-slider-item is-{{ displayMode }}"{% if minHeight and  (displayMode == "cover" or displayMode == "contain" ) %} style="min-height: {{ minHeight }}"{% endif %}>
                                                                         {% set attributes = {
-                                                                            'class': 'img-fluid gallery-slider-image magnifier-image js-magnifier-image',
+                                                                            'class': 'img-fluid gallery-slider-image',
                                                                             'alt': (image.translated.alt ?: fallbackImageTitle),
                                                                             'title': (image.translated.title ?: fallbackImageTitle),
                                                                             'data-full-image': image.url
@@ -204,11 +204,11 @@
                                         {% endblock %}
                                     {% else %}
                                         {% block element_image_gallery_inner_single %}
-                                            <div class="gallery-slider-single-image is-{{ displayMode }} js-magnifier-container"{% if minHeight %} style="min-height: {{ minHeight }}"{% endif %}>
+                                            <div class="gallery-slider-single-image is-{{ displayMode }}"{% if minHeight %} style="min-height: {{ minHeight }}"{% endif %}>
                                                 {% if imageCount > 0 %}
                                                     {#  TODO the img tag is here? for the single img                                                  #}
                                                     {% set attributes = {
-                                                        'class': 'img-fluid gallery-slider-image magnifier-image js-magnifier-image',
+                                                        'class': 'img-fluid gallery-slider-image',
                                                         'alt': (mediaItems|first.translated.alt ?: fallbackImageTitle),
                                                         'title': (mediaItems|first.translated.title ?: fallbackImageTitle),
                                                         'data-full-image': mediaItems|first.url
