--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/navigation/navigation.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/navigation/navigation.html.twig
@@ -110,19 +110,15 @@
                         {% block layout_main_navigation_menu_items %}
                             {% set activePath = page.header.navigation.active.path %}
 
-{#                            {% block layout_header_actions_cart %}#}
-{#                                        <a class="nav-link main-navigation-link header-actions-btn"#}
-{#                                           href="{{ path('frontend.checkout.cart.page') }}"#}
-{#                                           data-cart-widget="true"#}
-{#                                           title="{{ 'checkout.cartTitle'|trans|striptags }}"#}
-{#                                           aria-label="{{ 'checkout.cartTitle'|trans|striptags }}"#}
-{#                                           data-offcanvas-cart="true">#}
-{#                                            <h3>§</h3>#}
-{#                                            <div class="main-navigation-link-text">#}
-{#                                                <span itemprop="name">{{ 'checkout.cartTitle'|trans|striptags }}</span>#}
-{#                                            </div>#}
-{#                                        </a>#}
-{#                            {% endblock %}#}
+                            {% block layout_header_actions_cart %}
+                                        <a class="nav-link main-navigation-link header-actions-btn"
+                                           href="{{ path('frontend.checkout.cart.page') }}"
+                                           data-cart-widget="true"
+                                           title="{{ 'checkout.cartTitle'|trans|striptags }}"
+                                           aria-label="{{ 'checkout.cartTitle'|trans|striptags }}"
+                                           data-offcanvas-cart="true">
+                                        </a>
+                            {% endblock %}
                             {% for serviceMenuItem in page.header.serviceMenu %}
                                 {% set category = serviceMenuItem %}
                                 {% set name = category.translated.name %}
