--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/navigation/offcanvas/categories.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/navigation/offcanvas/categories.html.twig
@@ -53,6 +53,19 @@
                                 {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/item-link.html.twig' with { item: item, activeId: activeId } %}
                             {% endif %}
 
+                            {% if loop.last %}
+                                <li class="navigation-offcanvas-list-item">
+                                    {% block layout_header_actions_cart %}
+                                        <a class="nav-link main-navigation-link header-actions-btn"
+                                           href="{{ path('frontend.checkout.cart.page') }}"
+                                           data-cart-widget="true"
+                                           title="{{ 'checkout.cartTitle'|trans|striptags }}"
+                                           aria-label="{{ 'checkout.cartTitle'|trans|striptags }}"
+                                           data-offcanvas-cart="true">
+                                        </a>
+                                    {% endblock %}
+                                </li>
+                            {% endif %}
                         </ul>
                     </div>
                 {% endfor %}
