--- a/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/navigation/offcanvas/categories.html.twig
+++ b/src/custom/plugins/KiyoTheme/src/Resources/views/storefront/layout/navigation/offcanvas/categories.html.twig
@@ -10,22 +10,22 @@
     <div class="navigation-offcanvas-container js-navigation-offcanvas">
         <div class="navigation-offcanvas-overlay-content js-navigation-offcanvas-overlay-content">
             <div class="row">
-{#            {% if not isRoot %}#}
-{#                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-all-link.html.twig' %}#}
+            {% if not isRoot %}
+                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-all-link.html.twig' %}
 
 {#                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/active-item-link.html.twig' with { item: active } %}#}
 
 {#                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/back-link.html.twig' with { item: active } %}#}
-{#            {% else %}#}
+            {% else %}
 {#                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/general-headline.html.twig' %}#}
-{#            {% endif %}#}
+            {% endif %}
 
 
 {#            <ul class="list-unstyled navigation-offcanvas-list">#}
 {#                {% if not isRoot and page.navigation.active.type != "folder" %}#}
 {#                    {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-active-link.html.twig' with { item: active } %}#}
 {#                {% endif %}#}
-{#                #}{# @var item \Shopware\Core\Content\Category\Tree\TreeItem #}
+{#                 @var item \Shopware\Core\Content\Category\Tree\TreeItem#}
 {#                {% for item in children.tree %}#}
 {#                    {% if item.children|length > 0 %}#}
 {#                        <br>#}
@@ -40,9 +40,9 @@
                 {% for item in children.tree %}
                     <div class="col-sm-2">
                         <ul class="list-unstyled navigation-offcanvas-list">
-                            {#                {% if not isRoot and page.navigation.active.type != "folder" %}#}
-                            {#                    {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-active-link.html.twig' with { item: active } %}#}
-                            {#                {% endif %}#}
+                                            {% if not isRoot and page.navigation.active.type != "folder" %}
+                                                {% sw_include '@Storefront/storefront/layout/navigation/offcanvas/show-active-link.html.twig' with { item: active } %}
+                                            {% endif %}
                             {# @var item \Shopware\Core\Content\Category\Tree\TreeItem #}
 
                             {% if item.children|length > 0 %}
