--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-block-center-text.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/cms-block-center-text.scss
@@ -18,6 +18,7 @@
         max-width: 420px;
     }
 
+    .cms-block-container .col-md-6 .cms-element-text,
     .cms-block-container .col-md-5 .cms-element-text {
         max-width: 420px;
     }
