--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/footer.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/footer.scss
@@ -1,6 +1,6 @@
 footer.footer-main {
   border-top: 1.25px solid black;
-
+  margin-top: 80px;
   .container {
     padding: 30px 20px;
 
@@ -27,7 +27,9 @@ footer.footer-main {
 }
 
 @media (min-width: 768px) {
+
   footer.footer-main {
+    margin-top: 240px;
     .container {
       padding: 30px 60px;
     }
