--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/menu.scss
@@ -97,6 +97,7 @@ div.navigation-offcanvas-headline {
   .service-menu {
     .header-logo-main {
       margin-bottom: 32px;
+      margin-top: -13px;
     }
   }
 }
