--- a/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/buttons.scss
+++ b/src/custom/plugins/KiyoTheme/src/Resources/app/storefront/src/scss/buttons.scss
@@ -29,6 +29,20 @@
   border-color: #000000;
 }
 
+.btn-light.disabled, 
+.btn-light:disabled {
+  font-family: "SuisseIntlMono-Regular";
+  background-color: white;
+  min-width: 200px;
+  padding: 12px 22px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 16px;
+  border: 1px solid #000;
+  border-radius: 3px;
+  text-transform: uppercase;
+}
+
 .btn-block {
   width: auto;
 }
